--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fe992fc9",
+   "id": "d499b6a6",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95de1b19",
+   "id": "7142feed",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "683f0506",
+   "id": "7c1344cd",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "60986f17",
+   "id": "f6bcc4a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "147b8ae7",
+   "id": "351b10dd",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5a44a255",
+   "id": "26211372",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7831bef1",
+   "id": "0686f8cc",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1f136d89",
+   "id": "51fa2ac0",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d4afc258",
+   "id": "3ff99fd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e7871ad1",
+   "id": "bca111a3",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "27cd899a",
+   "id": "82c689ae",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bf85f6bd",
+   "id": "d552179b",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "633d1f6f",
+   "id": "016a1332",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "870112ac",
+   "id": "bf4bdef7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c4026616",
+   "id": "99b6b90a",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c80901f0",
+   "id": "243f22cb",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3865159a",
+   "id": "1d4f90e1",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "86704a1e",
+   "id": "12e25832",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0d24d771",
+   "id": "e9f80daf",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a9d2ea9a",
+   "id": "d7cfdf4d",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "624b0131",
+   "id": "0d610df0",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e18b1aeb",
+   "id": "ba4968a1",
    "metadata": {},
    "source": [
     "# Recap on simple parameters\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04ef7131",
+   "id": "b2fa4115",
    "metadata": {},
    "source": [
     "# Exercise: Rewrite `calc` to use parameters\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3fd5aca6",
+   "id": "09c0580a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "18c127cd",
+   "id": "56778492",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7fe9d6e2",
+   "id": "6724ea36",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6eec4023",
+   "id": "d6781544",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15a7aa94",
+   "id": "89096435",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46f53fbe",
+   "id": "35c37929",
    "metadata": {},
    "source": [
     "# Return values\n",
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "994cccbd",
+   "id": "40762d6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6e149370",
+   "id": "18a08289",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2c9c3198",
+   "id": "a837a06b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "144026e2",
+   "id": "fa07b216",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68f086c0",
+   "id": "c64a7577",
    "metadata": {},
    "source": [
     "# What might we return from a function?\n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2990e997",
+   "id": "4f5ebe2a",
    "metadata": {},
    "source": [
     "# Exercise: Biggest and smallest\n",
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c9efa607",
+   "id": "d16b3abd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2cb6ec24",
+   "id": "a0881f85",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "51dd012c",
+   "id": "aab74652",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1ced12ea",
+   "id": "e2140d93",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "b5dffa0c",
+   "id": "b2668bb7",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e25bea4c",
+   "id": "9f54646e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4a83596",
+   "id": "7c2190ac",
    "metadata": {},
    "source": [
     "# Types of arguments in Python\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "bec65ca7",
+   "id": "aee712cd",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a9d9c8f9",
+   "id": "df9fb0ee",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "09d587a3",
+   "id": "18bae7ff",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b42e47da",
+   "id": "d0081bcf",
    "metadata": {},
    "source": [
     "# Exercise: Name and age\n",
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "5a0ddf46",
+   "id": "4321d7e1",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "8fdbbfdc",
+   "id": "602d6156",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "154aca68",
+   "id": "cc8c00db",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c2a70f1b",
+   "id": "a8393cca",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd212e0e",
+   "id": "f472f8f7",
    "metadata": {},
    "source": [
     "# Optional arguments\n",
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0ebba53a",
+   "id": "a076abe7",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6e5c4aed",
+   "id": "f253ac95",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "42629650",
+   "id": "596e8190",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "22155384",
+   "id": "14138605",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "7088bcd5",
+   "id": "82ef2923",
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "b837c110",
+   "id": "ea18837d",
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0274507",
+   "id": "094aeaba",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "187862aa",
+   "id": "5312ff58",
    "metadata": {},
    "source": [
     "# f-strings (\"format strings\" or \"fancy strings\")\n",
@@ -1221,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d5fd67f7",
+   "id": "8ecba8f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "346a5907",
+   "id": "7cfb6971",
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "b738a7f0",
+   "id": "86292cd3",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "daf3d963",
+   "id": "24603a6c",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54f8c1b8",
+   "id": "1537aef7",
    "metadata": {},
    "source": [
     "# Argument typing"
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "68f80d31",
+   "id": "cec1bc9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "d9fda878",
+   "id": "f43efd54",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8f5f74a0",
+   "id": "d4b084c8",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "c27f1bc0",
+   "id": "6fd540dd",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "cb99ec06",
+   "id": "7e29beb6",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "dd4d80ba",
+   "id": "02468820",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "8788f971",
+   "id": "a5c216a2",
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "4679a69b",
+   "id": "986cd411",
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "979e7cf0",
+   "id": "a501dc0b",
    "metadata": {},
    "source": [
     "# Exercise: Vowel count\n",
@@ -1500,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "e241e341",
+   "id": "6550b4cd",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a24444",
+   "id": "315f6ace",
    "metadata": {},
    "source": [
     "# Complex return values\n",
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fd94a10",
+   "id": "66c4a57d",
    "metadata": {},
    "source": [
     "# Exercise: Filter vowels\n",
@@ -1575,7 +1575,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "f2962910",
+   "id": "73721257",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "449cf094",
+   "id": "b3c9c0fe",
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1629,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "d1f68d62",
+   "id": "8d159596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "20bbcdfd",
+   "id": "72cb28b4",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "889a3d72",
+   "id": "59e99a5c",
    "metadata": {},
    "source": [
     "# Tuple unpacking\n",
@@ -1688,7 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "ce804a24",
+   "id": "342a90bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "6efc7fe0",
+   "id": "0743e822",
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "af85f6cb",
+   "id": "f11c5321",
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "b961dbd5",
+   "id": "6d6f9724",
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1764,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "be82c341",
+   "id": "43b1d744",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1774,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "26f1a30e",
+   "id": "1b91ddfb",
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1795,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "41c5673f",
+   "id": "734b2e31",
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30600410",
+   "id": "00828e9f",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -1826,7 +1826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e85f6e8",
+   "id": "7e417090",
    "metadata": {},
    "source": [
     "# Exercise: `filter_characters`\n",
@@ -1847,8 +1847,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "84f5effa",
+   "execution_count": 81,
+   "id": "06ed044b",
    "metadata": {},
    "outputs": [
     {
@@ -1857,16 +1857,21 @@
        "('hll t ll f y!', {'a': 1, 'e': 1, 'i': 0, 'o': 4, 'u': 1})"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def filter_characters(s):\n",
+    "def filter_characters(s, filter_chars='aeiou'):  # filter_chars defaults to 'aeiou', but can be any string\n",
     "    output = ''\n",
-    "    count = {'a':0, 'e':0, 'i':0, 'o':0, 'u':0}\n",
-    "    \n",
+    "\n",
+    "    # create and populate our filter dict\n",
+    "    count = {}\n",
+    "    for one_character in filter_chars:\n",
+    "        count[one_character] = 0\n",
+    "\n",
+    "    # go through each character in s...\n",
     "    for one_character in s:\n",
     "        if one_character in count:\n",
     "            count[one_character] += 1  \n",
@@ -1881,13 +1886,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "785acd80",
+   "execution_count": 82,
+   "id": "08495d81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('hello to all of you', {'.': 0, '!': 1, '?': 0})"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "filter_characters('hello to all of you!', '.!?')  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbc80ffb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
